# PLANE

./: .gitignore  CMakeLists.txt  Makefile  PLANE.sln  PLANE.vcxproj  PLANE.vcxproj.filters  README.md  config.txt
PLANE/x64/Debug/: PLANE.exe.recipe  PLANE.ilk  vc143.idb
PLANE/x64/Debug/PLANE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PLANE.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
PLANE/x64/Release/: PLANE.exe.recipe
PLANE/x64/Release/PLANE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PLANE.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
docs/: ARCHITECTURE.md  CONTRIBUTING.md
include/: argparse.hpp  data_generation.hpp  data_generation_block.hpp  debug-manager.hpp  debug.hpp  filtering_block.hpp  iprocess_block.hpp  labelling_block.hpp  lock_free_queue.hpp  pipeline.hpp  ring_buffer.hpp  tracing_block.hpp
src/: debug.cpp  lock_free_queue.cpp  main.cpp  pipeline.cpp  ring_buffer.cpp
src/blocks/: data_generation_block.cpp  filter_block.cpp  filtering_block.cpp  labelling_block.cpp  tracing_block.cpp
